--- a/buger/index4.html
+++ b/buger/index4.html
@@ -42,6 +42,7 @@
                 <button type="button" class="btn btn-secondary btn-lg button_step" id='step1_btn'>STEP1</button>
                 <br><br>
                 <button type="button" class="btn btn-secondary btn-lg button_step opacity">重新選擇取餐門市</button>
+                <div id="mapbox"></div>
             </div>
             <div class="step2">
                 <button type="button" class="btn btn-secondary btn-lg button_step red" id='step2_btn'>STEP2</button>
